feat: setup auth on server and generate migration

--- a/trivyal_server/.gitignore
+++ b/trivyal_server/.gitignore
@@ -13,3 +13,6 @@ config/passwords.yaml
 
 # Firebase service account key for Firebase auth
 config/firebase_service_account_key.json
+
+# Google client secret for Google auth
+config/google_client_secret.json
