--- a/trivyal_flutter/pubspec.yaml
+++ b/trivyal_flutter/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
+  serverpod_auth_google_flutter: 2.1.4
+  flutter_riverpod: ^2.5.3
 
 dev_dependencies:
   flutter_lints: ">=3.0.0 <6.0.0"
