--- a/trivyal_server/pubspec.yaml
+++ b/trivyal_server/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
+  collection: ^1.19.1
+  rxdart: ^0.28.0
   serverpod: 2.1.5
   serverpod_auth_server: 2.1.5
 
