fix: use native Serverpod user in models
fix: use choice id to determine correct choice

--- a/trivyal_server/lib/src/models/game.spy.yaml
+++ b/trivyal_server/lib/src/models/game.spy.yaml
@@ -2,5 +2,5 @@ class: Game
 table: games
 fields:
   name: String
-  owner: User?, relation(name=user_games, onDelete=cascade)
-  questions: List<Question>?, relation(name=game_questions)
+  owner: module:auth:UserInfo?, relation(onDelete=cascade)
+  questions: List<Question>?, relation
