--- a/trivyal_server/lib/src/models/question.spy.yaml
+++ b/trivyal_server/lib/src/models/question.spy.yaml
@@ -1,8 +1,8 @@
 class: Question
 table: questions
 fields:
-  game: Game?, relation(name=game_questions, onDelete=cascade)
+  gameId: int, relation(parent=games, onDelete=cascade)
   text: String
   choices: List<Choice>
-  correctChoice: Choice
+  correctChoiceId: int
   timeInSeconds: int
