--- a/trivyal_flutter/pubspec.yaml
+++ b/trivyal_flutter/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   cupertino_icons: ^1.0.5
   serverpod_auth_google_flutter: 2.1.5
   flutter_riverpod: ^2.5.3
+  material_symbols_icons: ^4.2789.0
+  flex_color_picker: ^3.6.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_lints: ">=3.0.0 <6.0.0"
